20061112 0.4.1 <kevin@koconnor.net>

  * Implement new Machine class to handle per-machine options.  Add
    support for auto-detecting the current machine type.

  * Import mach-types.h and pxa-regs.h from latest linux sources.
    Update code to use linux defs instead of local defines.

  * Add macro support for defining coprocessor accessor functions.

  * When mapping a physical address, scan for wince 1Meg section
    mapping that already exists.  This reduces the calls to
    VirtualAlloc and makes HaRET much more stable.  (For example, now
    "dump mmu" works reliably.)

  * Fix all compile warnings.

20061111 0.4.0 <kevin@koconnor.net>

  * Add the ability to log "Output()" messages to a disk file when a
    file "earlyharetlog.txt" exists in the same directory as the haret
    executable.  In addition, a bunch of startup Output() logs were
    added.  This feature is useful for diagnosing crashes at program
    startup.

  * Update code so that haret compiles with cegcc.  This involves a
    few minor code changes to the C++ code and some file renames.  The
    assembler syntax was also updated to work with with gas.  Two
    existing features were disabled - gx based framebuffer detection
    and the BWMEM command - both were causing compile problems.

02-May-2006 v0.3.7, <ynezz@hysteria.sk>
    -*- Updated main dialog to WM GUI behavior
    -*- Replaced code for getting framebuffer pointer
    -*- Added possibility to init COM1 port settings
    -*- Added two commandline options -r(run) and -k(kill)
        run - don't do any gui stuff, just init and boot. This option shorten
        development cycle a lot, so you can do "synce-prun haret -r" as soon as 
        you have ActiveSync connection
        kill - just kills 'welcome.exe' process (LCD calibration) before haret 
        dialog startup, in case you won't calibrate LCD but need haret GUI
    -*- Added support for VGA booting penguin bitmaps
    -*- Added Visual Studio 2k5 project file