@@ -1,0 +1,23 @@
+This directory contains scripts useful for running on a host computer
+when interacting with HaRET that is running on a pda.
+
+The main script is invoked by running:
+
+console <ip of phone>
+
+This will telnet to the phone's ip on port 9999.  If the console
+script is run from a unix machine, readline capabilities will be
+provided.  The program will also automatically disassemble the output
+from the "wi" command.
+
+In order for dissasembly to work, a working copy of arm-linux-objdump
+should be in the path, in the current directory, or in the directory
+the console script is located in.
+
+
+There are two additional helper scripts in the directory.  The
+"dis.py" script can be used to disassemble the output from the raw
+"haretlog" files that the console program produces.  The
+"scanserial.py" script is a simple program that also takes a haretlog
+file as input - it can produce strings from a "wi" command trace of a
+serial port.
